--- a/homework.ipynb
+++ b/homework.ipynb
@@ -69,6 +69,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>0.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>0.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>0.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>0.61</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>178 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      hue\n",
+       "0    1.04\n",
+       "1    1.05\n",
+       "2    1.03\n",
+       "3    0.86\n",
+       "4    1.04\n",
+       "..    ...\n",
+       "173  0.64\n",
+       "174  0.70\n",
+       "175  0.59\n",
+       "176  0.60\n",
+       "177  0.61\n",
+       "\n",
+       "[178 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = ['ash', 'hue']\n",
+    "a = wine_data[columns].copy()\n",
+    "a.drop(columns = ['ash'], inplace=True)\n",
+    "wine_data\n",
+    "a"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,18 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1 point\n",
     "def scale(X):\n",
-    "    # your code here"
+    "    return (X - X.mean())/np.std(X)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,27 +241,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2 points\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "class CustomScaler(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self, columns, copy=True, with_mean=True, with_std=True):\n",
+    "    def __init__(self, columns=None, copy=True, with_mean=True, with_std=True):\n",
     "        # your code here\n",
+    "        self.columns = columns\n",
+    "        self.copy = copy\n",
+    "        self.with_mean = with_mean\n",
+    "        self.with_std = with_std\n",
+    "        self.X = None\n",
     "\n",
     "    def fit(self, X, y=None):\n",
-    "        # your code here\n",
+    "        if copy:\n",
+    "            self.X = X.copy()\n",
+    "        else:\n",
+    "            self.X = X\n",
+    "        if columns:\n",
+    "            self.X = self.X[columns]\n",
+    "        if not self.with_std & y:\n",
+    "            self.std = y\n",
+    "        else:\n",
+    "            self.std = np.std(X)\n",
+    "        if self.with_mean:\n",
+    "            self.mean = X.mean()\n",
+    "        else:\n",
+    "            self.mean = 0\n",
     "        return self\n",
     "\n",
     "    def transform(self, X, y=None, copy=None):\n",
-    "        # your code here"
+    "        return (X - X.mean())/np.std(X)\n",
+    "    \n",
+    "    def fit_transform(self, X):\n",
+    "        return self.fit(X).transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
