--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1427,6 +1427,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.787241159764734"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
    "outputs": [
